--- a/css/layout.css
+++ b/css/layout.css
@@ -187,18 +187,18 @@ ul#nav li.current a { color: #193403; }
 /* ------------------------------------------------------------------ */
 
 #about {
-   background: #313131;
+   background: #fff;
    padding-top: 96px;
    padding-bottom: 66px;
    overflow: hidden;
 }
 
-#about a, #about a:visited  { color: #fff; }
+#about a, #about a:visited  { color: #333; }
 #about a:hover, #about a:focus { color: #11ABB0; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
-   color: #fff;
+   color: #333;
    margin-bottom: 12px;
 }
 #about p {
