--- a/public/css/font-awesome/less/variables.less
+++ b/public/css/font-awesome/less/variables.less
@@ -340,6 +340,7 @@
 @fa-var-dropbox: "\f16b";
 @fa-var-stack-overflow: "\f16c";
 @fa-var-instagram: "\f16d";
+@fa-var-tiktok: "\e07b";
 @fa-var-flickr: "\f16e";
 @fa-var-adn: "\f170";
 @fa-var-bitbucket: "\f171";
