--- a/public/css/font-awesome/css/font-awesome.css
+++ b/public/css/font-awesome/css/font-awesome.css
@@ -1219,6 +1219,9 @@
 }
 .fa-instagram:before {
   content: "\f16d";
+} 
+.fa-tiktok:before {
+  content: "\e07b"
 }
 .fa-flickr:before {
   content: "\f16e";
