--- a/css/layout.css
+++ b/css/layout.css
@@ -30,14 +30,17 @@ body { background: #fff; }
 
 header {
    position: relative;
-   height: 800px;
-   min-height: 500px;
+   height:fit-content;
+   width:fit-content;
+   min-height: 700px;
+   height: 100%;
    width: 100%;
-   background: #161415 url(../images/bg.jpg) no-repeat top center;
+   background: #161415 url(../images/bgmerah2.svg) no-repeat center;
    background-size: cover !important;
 	-webkit-background-size: cover !important;
    text-align: center;
    overflow: hidden;
+   background-attachment: fixed;
 }
 
 /* vertically center banner section */
@@ -59,11 +62,21 @@ header .banner {
 header .banner-text { width: 100%; }
 header .banner-text h1 {
    font: 90px/1.1em 'opensans-bold', sans-serif;
+   font-size: 10px;
    color: #fff;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
+   header .banner-text h2 {
+      font: 90px/1.1em 'opensans-bold', sans-serif;
+      font-size: 10px;
+      color: #fff;
+      letter-spacing: -2px;
+      margin: 0 auto 18px auto;
+      text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
+}
+
 header .banner-text h3 {
    font: 18px/1.9em 'librebaskerville-regular', serif;
    color: #A8A8A8;
@@ -117,10 +130,16 @@ header .scrolldown a {
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
 }
-header .scrolldown a:hover { color: #11ABB0; }
+header .scrolldown a:hover { 
+   color: #460202;
+}
 
 /* primary navigation
 --------------------------------------------------------------------- */
+/* #nav-wrap img {
+   background: url(../images/iconloli.svg);
+} */
+
 #nav-wrap ul, #nav-wrap li, #nav-wrap a {
 	 margin: 0;
 	 padding: 0;
@@ -140,12 +159,12 @@ header .scrolldown a:hover { color: #11ABB0; }
    left: 0;
    top: 0;;
 }
-.opaque { background-color: #333; }
+.opaque { background-color: #460202 }
 
 /* hide toggle button */
 #nav-wrap > a.mobile-btn { 
    display: none; 
-   background-color: #193403;
+   background-color: #460202;
    margin-top: 25px;
    border-radius: 15px;
    }
@@ -156,7 +175,7 @@ ul#nav {
 
    /* center align the menu */
    text-align: center;
-   opacity: 75%;
+   opacity: 85%;
    border-radius: 15px;
 }
 ul#nav li {
@@ -186,7 +205,7 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #193403; }
+ul#nav li.current a { color: #460202; }
 
 
 /* ------------------------------------------------------------------ */
@@ -200,7 +219,7 @@ ul#nav li.current a { color: #193403; }
 }
 
 #about a, #about a:visited  { color: #333; }
-#about a:hover, #about a:focus { color: #11ABB0; }
+#about a:hover, #about a:focus { color: #460202; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
@@ -259,7 +278,7 @@ ul#nav li.current a { color: #193403; }
   
 }
 #resume h1 span {
-   border-bottom: 3px solid #11ABB0;
+   border-bottom: 3px solid #9e0c0c;
    padding-bottom: 6px;
    
 }
@@ -951,7 +970,7 @@ footer {
 }
 
 footer a, footer a:visited { color: #525252; }
-footer a:hover, footer a:focus { color: #fff; }
+footer a:hover, footer a:focus { color: #460202; }
 
 /* copyright */
 footer .copyright {
@@ -1004,9 +1023,9 @@ footer .social-links li:first-child { margin-left: 0; }
 	text-decoration: none;
 	border: 0 none;
 	display: block;
-	width: 60px;
-	height: 60px;
-	background-color: #525252;
+	width: 40px;
+	height: 40px;
+	background-color: rgb(90, 88, 88);
 
 	-webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
@@ -1019,5 +1038,5 @@ footer .social-links li:first-child { margin-left: 0; }
    line-height: 60px;
  	border-radius: 100%;
 }
-#go-top a:hover { background-color: #0F9095; }
+#go-top a:hover { background-color: #460202; }
 
